## Change log

### 1.0.5 - In Development
* Fix - Placeholder for Waist changed to cm.

### 1.0.4 - 13 September 2019
* Fix - Downloads box will not have duplicated links
* Fix - Removing the display non for the EFT page
* Fix - Added in Fix for Recipe details on Mobile View
* Dev - Activating github actions.

### 1.0.3
* Dev - Removed Peach Payments and added in Payfast on Checkout
* Fix - Removed unnecessary link on Tips

### 1.0.2
* Dev - Changing icons to be inline svgs.
* Fix - Fixing the week view order to be by date.
* Fix - Recipes and shopping list box only appear if they are not empty on the Meal Plan Tab

### 1.0.1
* Fix - Style fixes and improvements on desktop and mobile.

### 1.0
* Initial release